Enhance backend setup with TypeScript and module resolution updates
- Add .gitignore to exclude Node.js and log files
- Update package.json to replace ts-node-dev with tsx for development
- Modify tsconfig.json to use NodeNext module resolution
- Update import statements in index.ts and sampleRoute.ts to include file extensions
- Update pnpm-lock.yaml to reflect new dependencies and versions

This commit improves the development environment and ensures compatibility with ES module imports.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,7 +12,12 @@
       "baseUrl": ".",
       "paths": {
         "@/*": ["src/*"]
-      }
+      },
+      "types": ["node", "jest", "express", "cors", "supertest"]
+    },
+    "ts-node": {
+      "esm": true,
+      "experimentalSpecifierResolution": "node"
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "dist", "**/*.test.ts"]
