--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,56 @@
-# Node.js
+# Dependencies
 node_modules/
+.pnp/
+.pnp.js
 
-# Logs
-logs
-*.log
-npm-debug.log*
+# Testing
+coverage/
+.nyc_output/
 
-# Dependency directories
+# Production
+build/
 dist/
+dist-ssr/
+*.local
+
+# Environment Variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Firebase
+.firebase/
+firebase-debug.log*
+firebase-debug.*.log*
+firestore-debug.log*
+ui-debug.log*
+
+# IDE
+.idea/
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+
+# OS
+.DS_Store
+*.pem
+Thumbs.db
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+debug.log
+
+# TypeScript
+*.tsbuildinfo
+
+# Project specific
+/iot/mqtt/logs/
+/iot/sensors/debug/
+/ai/training/tmp/
+/ai/models/tmp/
