--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.34",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^11.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "styled-components": "^6.1.14",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
