--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,5 +7,11 @@
     },
     "incremental": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist", "**/*.spec.ts", "**/*.test.ts"],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
+    }
+  ]
 }
