--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "firebase": "^11.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.28.2",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
