--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "firebase": "^11.2.0",
     "framer-motion": "^12.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
