--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@netlify/functions": "^2.4.1",
     "express": "^4.18.2",
+    "firebase": "^10.7.0",
     "framer-motion": "^10.17.9",
     "nodemailer": "^6.9.8",
     "react": "^18.2.0",
