--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "clsx": "^2.1.1",
     "firebase": "^11.2.0",
-    "framer-motion": "^12.0.5",
+    "framer-motion": "^12.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.28.2",
+    "tailwind-merge": "^2.6.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
     "@vitejs/plugin-react": "^4.3.4",
